@@ -1,0 +1,2 @@
+# default owners
+*   @klen
