@@ -1,23 +1,0 @@
-language: python
-
-matrix:
-  include:
-    - python: 2.7
-      env: TOXENV=py27
-    - python: 3.6
-      env: TOXENV=py36
-    - python: 3.6
-      env: TOXENV=cov
-      after_script:
-        - pip install coveralls;
-        - coveralls;
-
-branches:
-    only:
-        - master
-        - develop
-
-install: pip install tox
-
-script: tox
-
