@@ -1,4 +1,0 @@
-cached_property     >= 1.4.2
-click               >= 6.7
-mock                >= 2.0.0
-peewee              >= 3.3.3
