@@ -1,3 +1,7 @@
+2021-01-20  klen
+
+	* Drop python2 support
+
 2018-11-02  klen
 
 	* Support indexes for autogenerated models
